sets up basic visualization framework for vehicles

--- a/dvr_msgs/CMakeLists.txt
+++ b/dvr_msgs/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(dvr_nodes)
+project(dvr_msgs)
 
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
@@ -10,39 +10,14 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
-# find dependencies
 find_package(ament_cmake_auto REQUIRED)
-find_package(Eigen3 REQUIRED)
-
 ament_auto_find_build_dependencies()
 
-include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
-
-ament_auto_add_library(vehicle_node SHARED
-  src/vehicle_node.cpp
-)
-
-rclcpp_components_register_node(vehicle_node
-  PLUGIN "dvr::VehicleNode"
-  EXECUTABLE vehicle
-)
-
-ament_auto_add_library(vehicle_viz_node SHARED
-  src/visualization/vehicle_viz_node.cpp
-)
-
-rclcpp_components_register_node(vehicle_viz_node
-  PLUGIN "dvr::VehicleVizNode"
-  EXECUTABLE vehicle_visualization
-)
-
-ament_auto_add_library(world_viz_node SHARED
-  src/visualization/world_viz_node.cpp
-)
-
-rclcpp_components_register_node(world_viz_node
-  PLUGIN "dvr::WorldVizNode"
-  EXECUTABLE world_visualization
+rosidl_generate_interfaces(${PROJECT_NAME}
+  "msg/VehicleStateStamped.msg"
+  DEPENDENCIES
+    geometry_msgs
+    std_msgs
 )
 
 if(BUILD_TESTING)
